--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -12,4 +12,12 @@
         <attr name="borderColor" format="color"/>
         <attr name="strokeWidth" format="dimension"/>
     </declare-styleable>
+    <declare-styleable name="LineProgressIndicator">
+        <attr name="minLineValue" format="integer"/>
+        <attr name="maxLineValue" format="integer"/>
+        <attr name="lineProgressValue" format="integer"/>
+        <attr name="activeLineProgressBarColor" format="color"/>
+        <attr name="inactiveLineProgressBarColor" format="color"/>
+        <attr name="lineProgressBarThickness" format="dimension"/>
+    </declare-styleable>
 </resources>
