--- a/app/src/main/res/drawable/background_black_dash.xml
+++ b/app/src/main/res/drawable/background_black_dash.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<rotate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:fromDegrees="90"
-    android:toDegrees="90" >
-    <shape android:shape="line" >
-        <stroke
-            android:width="5dp"
-            android:color="@color/cardview_dark_background"/>
-    </shape>
-</rotate>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item
+        android:gravity="center">
+        <shape android:shape="rectangle">
+            <size android:width="3dp" />
+            <solid android:color="@color/color_dark_grey" />
+        </shape>
+    </item>
+
+</layer-list>
