--- a/app/src/main/res/drawable/background_dotted.xml
+++ b/app/src/main/res/drawable/background_dotted.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<rotate xmlns:android="http://schemas.android.com/apk/res/android"
-android:fromDegrees="90"
-android:toDegrees="90" >
-<shape android:shape="line" >
-    <stroke
-        android:width="3dp"
-        android:color="@color/color_dark_grey"
-        android:dashWidth="5dp"
-        android:dashGap="5dp" />
-</shape>
-
-</rotate>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:left="-600dp"
+        android:right="-600dp">
+        <rotate
+            android:fromDegrees="90"
+            android:visible="true" >
+            <shape android:shape="line" >
+                <stroke
+                    android:width="3dp"
+                    android:color="@color/color_dark_grey"
+                    android:dashWidth="5dp"
+                    android:dashGap="5dp" />
+            </shape>
+        </rotate>
+    </item>
+</layer-list>
