--- a/app/src/main/res/drawable/background_white_dash.xml
+++ b/app/src/main/res/drawable/background_white_dash.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<rotate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:fromDegrees="90"
-    android:toDegrees="90" >
-    <shape android:shape="line" >
-        <stroke
-            android:width="5dp"
-            android:color="@color/white"/>
-    </shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-</rotate>
+<item
+    android:gravity="center">
+    <shape android:shape="rectangle">
+        <size android:width="4dp" />
+        <solid android:color="@color/white" />
+    </shape>
+</item>
+
+</layer-list>
