--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_marginStart="@dimen/margin_medium_2"
     android:layout_marginEnd="@dimen/margin_medium_2"
-    tools:context=".MainActivity">
+    tools:context=".activities.MainActivity">
 
     <RelativeLayout
         android:id="@+id/rlHeaderLayout"
@@ -100,11 +100,63 @@
     </RelativeLayout>
     <RelativeLayout
         android:background="@drawable/bg_task_layout"
+        android:layout_marginTop="@dimen/margin_medium_2"
         android:layout_below="@id/rlProfile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/lblData"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/margin_medium"
+            android:layout_marginStart="@dimen/margin_card_medium_2"
+            android:layout_marginTop="@dimen/margin_xlarge"
+            android:fontFamily="@font/roboto_regular"
+            android:text="Data"
+            android:textColor="@color/color_dark_grey"
+            android:textSize="@dimen/text_small"
+            android:textStyle="bold" />
+
+        <View
+            android:id="@+id/viewDottedLine"
+            android:layout_width="5dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/lblData"
+            android:layout_alignTop="@id/lblData"
+            android:layout_marginStart="55dp"
+            android:background="@drawable/background_dotted" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/lblData"
+            android:layout_alignParentEnd="true"
+            >
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/lblShowInDays"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_marginStart="@dimen/margin_medium_2"
+                android:fontFamily="@font/roboto_regular"
+                android:text="@string/show_in_days"
+                android:textColor="@color/color_dark_grey"
+                android:textSize="@dimen/text_small"
+                android:textStyle="bold" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/ivMainDropDown"
+                android:layout_width="@dimen/margin_large"
+                android:layout_height="@dimen/margin_large"
+                android:layout_marginStart="@dimen/margin_small"
+                android:layout_marginEnd="@dimen/margin_medium_2"
+                android:tint="@color/color_dark_grey"
+                app:srcCompat="@drawable/ic_dropdown" />
+
+        </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvTaskList"
+            android:layout_below="@id/lblData"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
