--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="color_primary">#33354E</color>
     <color name="color_accent_orange">#F26950</color>
     <color name="color_accent_orange_50">#80F26950</color>
+    <color name="color_accent_green50">#802CC09C</color>
     <color name="color_accent_green">#2CC09C</color>
     <color name="color_transparent">#00FFFFFF</color>
     <color name="color_dark_grey">#AEB7CA</color>
