--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,4 +16,8 @@
     <style name="ShapeAppearanceOverlay.App.CornerSize50Percent" parent="">
         <item name="cornerSize">50%</item>
     </style>
+    <style name="CustomerSpinnerStyle" >
+        <item name="android:textColor">@color/white</item>
+        <item name="android:colorBackground">@color/color_primary</item>
+    </style>
 </resources>
