--- a/app/src/main/res/layout/view_holder_task.xml
+++ b/app/src/main/res/layout/view_holder_task.xml
@@ -3,6 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="@dimen/margin_medium_2"
+    android:layout_marginTop="@dimen/margin_medium_2"
     android:background="@drawable/background_task"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.appcompat.widget.AppCompatTextView
@@ -99,8 +100,8 @@
         android:layout_toStartOf="@id/imgProfile"
         android:gravity="center"
         android:fontFamily="@font/roboto_regular"
-        android:textSize="@dimen/text_regular_2x"
         android:layout_marginEnd="@dimen/margin_small"
+        android:textStyle="bold"
         android:text="No 194"
         android:layout_alignTop="@id/imgProfile"
         android:layout_alignBottom="@id/imgProfile"/>
